# autotuner-rust

./: Cargo.toml  Instructions.md  README.md  README.md.orig  contacts.csv  journal.md  retour_proposition_1.md
Projet/: Cargo.toml
Projet/src/: launcher.rs  main.rs
Projet/src/GUI/: gui.rs
Projet/src/WavReader/: WavReader.rs
Projet/src/tracking/: midi.rs  mod.rs  tracking.rs
Projet/src/wav_reader/: mod.rs  wav_reader.rs
Projet/tests/: fft_tests.rs
rapport/: Makefile  rapport-peneloux-scheiner.tex
src/: launcher.rs
src/WavReader/: WavReader.rs  mod.rs
suivi/: journal.md  reponse_17_nov.md  retour_proposition.md
