[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
rodio = "0.17.3"

[[test]]
name = "test_fft"
path = "tests/fft_test.rs"
harness = false
args = ["../resource/3s.wav"]